--- a/style.css
+++ b/style.css
@@ -14,7 +14,8 @@ body {
 
 nav,
 #titulo,
-.logo {
+.logo,
+button {
   font-family: GalanoGrotesqueDEMOBold;
 }
 
@@ -43,8 +44,8 @@ ul li {
 ul li a {
   text-decoration: none;
   color: #b0bed2;
-  padding: 8px 30px;
-  border-radius: 7px;
+  padding: 8px 25px;
+  border-radius: 20px;
   transition: all .5s ease;
 }
 
@@ -70,13 +71,13 @@ ul li a:active {
   padding: 5px 7px 3px 7px;
   border-radius: 4px;
   cursor: pointer;
-  transition: all .8s ease;
+  transition: all .5s ease;
 }
 
 #icon svg {
   color: #fff;
   height: 28px;
-  transition: all .8s ease;
+  transition: all .5s ease;
 }
 
 #icon:hover {
@@ -169,10 +170,23 @@ ul li a:active {
   font-size: 1rem;
   font-weight: 500;
   color: #919cac;
-  padding: 10% 0;
+  padding: 8% 0 5% 0;
 }
 
 #home-left button {
+  width: 35%;
+  height: 12%;
+  margin-left: 2%;
   background-color: #70D1B9;
-  border-radius: 7px;
+  border-radius: 20px;
+  border: none;
+  font-size: 1rem;
+  color: #fff;
+  cursor: pointer;
+  transition: all .5s ease;
+}
+
+#home-left button:hover {
+  color: #D8E5E6;
+  background-color: #919cac;
 }
